# ChessV3

./: CMakeLists.txt  README
client/: CMakeLists.txt  main.cpp
client/.oldcli/cli/: CMakeLists.txt  boardClickedSingle.cpp  chessCli.h  processMessageSingle.cpp
client/cli/: chessCli.cpp  chessCli.h  chessMoves.cpp  generateMoves.cpp  processMessageConnected.cpp  processMessageSingle.cpp
client/gui/: CMakeLists.txt  chessCegui.cpp  chessGtkmm.cpp  chessGui.cpp  chessGui.h  chessServer.cpp  chessSfml.cpp
client/gui/.old/: chessComponent.cpp  chessMenu.cpp  chessServerSelect.cpp
client/net/: CMakeLists.txt  chessNet.cpp  chessNet.h  connected.cpp
client/src/: CMakeLists.txt  main.cpp  messages.h  myvector2.h
client/src/cli/: CMakeLists.txt  addPieceMoves.cpp  check.cpp  checkMate.cpp  chessCli.cpp  chessCli.h  generateMoves.cpp  processMessageConnected.cpp  removeCastle.cpp
client/src/gui/: CMakeLists.txt  chessCegui.cpp  chessCegui.h  chessGui.cpp  chessGui.h  chessServer.cpp  chessServer.h
client/src/gui/.old/: CMakeLists.txt  chessComponent.h  chessGui.cpp  chessMenu.h  chessServerSelect.h
client/src/net/: CMakeLists.txt  chessNet.cpp  chessNet.h  connected.cpp
client/uci/: CMakeLists.txt  chessUci.cpp  chessUci.h
cmake/: FindCEGUI.cmake  PCH_GCC4_v2.cmake
res/: mainLayout.glade  resources.xml
server/: CMakeLists.txt
server/cli/: boardClickedSingle.cpp  processMessageConnected.cpp  processMessageServer.cpp
server/game/: CMakeLists.txt  chessGame.cpp  chessGame.h  processMessageServer.cpp
server/network/: chessConnection.cpp  chessConnection.h  chessNetwork.cpp  chessNetwork.h
server/src/: CMakeLists.txt  main.cpp  messages.h
server/src/cli/: CMakeLists.txt  boardClickedServer.cpp  check.cpp  checkMate.cpp  chessCli.cpp  chessCli.h  chessMoves.cpp  generateMoves.cpp  removeCastle.cpp
server/src/network/: CMakeLists.txt  chessConnection.cpp  chessConnection.h  chessNetwork.cpp  chessNetwork.h
shared/: .messages.h.swo  messages.h  myDataBase.h  myvector2.h  netMessages.h
shared/engine/: CMakeLists.txt  addPieceMoves.cpp  boardClickedSingle.cpp  check.cpp  checkMate.cpp  chessEngine.cpp  chessEngine.h  chessMoves.cpp  generateMoves.cpp  (+2 more)
